--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@turf/turf": "^7.2.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +37,7 @@
     "framer-motion": "^11.3.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
+    "mapbox-gl": "^3.15.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "openai": "^4.52.7",
@@ -43,6 +45,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-map-gl": "^8.1.0",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.6.0",
